--- a/CSS/Home.css
+++ b/CSS/Home.css
@@ -4,7 +4,7 @@ a:hover {color: black; text-decoration: none; font-family: Georgia, serif; font-
 a:active {color: black; text-decoration: none; font-family: Georgia, serif; font-size: 20px;}
 
 .header img {height: 100px; width: auto;}
-.header {display: flex; justify-content: space-evenly; align-items: center; max-width: 100%;}
+.header {display: flex; justify-content: space-evenly; align-items: center; width: 100%;}
 
 .highlight img {height: auto; width: 16.66%;}
 .highlight {display: flex;}
