--- a/CSS/Home.css
+++ b/CSS/Home.css
@@ -4,7 +4,7 @@ a:hover {color: black; text-decoration: none; font-family: Georgia, serif; font-
 a:active {color: black; text-decoration: none; font-family: Georgia, serif; font-size: 20px;}
 
 .header img {height: 100px; width: auto;}
-.header {display: flex; justify-content: space-evenly; align-items: center; width: 100%;}
+.header {display: flex; justify-content: space-evenly; align-items: center;}
 
 .highlight img {height: auto; width: 16.66%;}
 .highlight {display: flex;}
@@ -22,5 +22,7 @@ button:hover {background-color: white; border: 3px solid pink;}
 .instagram img {height: auto; width: 8%; padding-left: 5px; padding-right: 5px;}
 .instagram {display: flex; justify-content: center;}
 
-.footer {display: flex; padding-top: 50px; justify-content: center; box-sizing: border-box; flex-wrap: wrap;}
+.footer {display: flex; padding-top: 50px; justify-content: center;}
 .footer a {padding-left: 50px; padding-right: 50px;}
+
+@media (max-width: 600px) {.header {height: 50px; width: auto;} .footer a {padding-left: 10px; padding-right: 10px;}}
