--- a/CSS/Home.css
+++ b/CSS/Home.css
@@ -25,4 +25,4 @@ button:hover {background-color: white; border: 3px solid pink;}
 .footer {display: flex; padding-top: 50px; justify-content: center;}
 .footer a {padding-left: 50px; padding-right: 50px;}
 
-@media (max-width: 600px) {.header {height: 25px; width: auto;} .header {font-size: 10px;} .footer a {padding-left: 10px; padding-right: 10px; font-size: 10px;}}
+@media (max-width: 600px) {.header img {height: 25px; width: auto;} .header {font-size: 10px;} .footer a {padding-left: 10px; padding-right: 10px; font-size: 10px;}}
