--- a/CSS/Home.css
+++ b/CSS/Home.css
@@ -25,6 +25,10 @@ button:hover {background-color: white; border: 3px solid pink;}
 .footer {display: flex; padding-top: 50px; justify-content: center;}
 .footer a {padding-left: 50px; padding-right: 50px;}
 
-@media (max-width: 600px) {.header img {height: 25px; width: auto;} .header a {font-size: 10px;} .footer a {padding-left: 10px; padding-right: 10px; font-size: 10px;} .logo {
-    width: 65%; height: auto;} .paragraph {width: 75%; height: auto; padding-top: 25px; padding-bottom: 25px;} button {width: 30%; font-size: 10px; color: black; text-align: center;} .handle a {font-size: 10px;}
+@media (max-width: 600px) {.header img {height: 25px; width: auto;} .header a {font-size: 10px;} 
+.footer a {padding-left: 10px; padding-right: 10px; font-size: 10px;} 
+.logo {width: 65%; height: auto;} 
+.paragraph {width: 75%; height: auto; padding-top: 25px; padding-bottom: 25px;} 
+button {width: 30%; font-size: 10px; color: black; text-align: center;} 
+.handle a {font-size: 10px;}
 }
